fix: arrange element's position on mobile size

--- a/style.css
+++ b/style.css
@@ -31,7 +31,9 @@ nav {
 .options{
     display: flex;
     justify-content: space-between;
-    padding: 20px 50px 20px 50px;
+    flex-wrap: wrap;
+    gap:20px;
+    margin: 20px 50px 0px 50px;
     margin-top: 20px;
 }
 .search-input{
@@ -123,7 +125,7 @@ nav {
     flex-wrap: wrap;
     gap: 42px;
     align-items: center;
-    padding: 20px 50px 20px 50px;
+    margin: 20px 50px 0px 50px;
 }
 
 .card{
@@ -180,7 +182,7 @@ nav {
     color:black;
     background-color: #f57149;
     color:hsl(0, 0%, 100%);
-    margin-top: 20px;
+    margin: 20px 50px 0px 50px;
     text-align: center;
     display: none;
 }
@@ -190,7 +192,7 @@ nav {
     color:black;
     background-color: hsl(0, 0%, 100%);
     color:hsl(200, 15%, 8%);;
-    margin-top: 20px;
+    margin: 20px 50px 0px 50px;
     text-align: center;
     display: none;
     box-shadow: 0px 3px #e1e4de40;
@@ -201,7 +203,7 @@ nav {
 .back{
     display:flex;
     margin-top: 20px;
-    padding: 20px 50px 20px 50px;
+    margin: 40px 50px 0px 50px;
     
 }
 
